Full Login System Complete

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,8 @@ GOOGLE_CLIENT_SECRET=""
 # Prisma
 DATABASE_URL=""
 DIRECT_URL=""
+
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
