--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
@@ -47,6 +48,7 @@
     "next": "^15.2.3",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
+    "qss": "^3.0.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.0.0",
